samples/_failures_safe/1761600130_308aa8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b430299f.c: In function ‘main’:
./samples/SAFE/__tmp_b430299f.c:190:5: error: expected declaration or statement at end of input
  190 |     dfs(&g, start);
      |     ^~~
